<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:textSize="11sp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="#032441"
        android:maxWidth="220dp"
        android:padding="12dp"
        android:text="@string/sent_message"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="200dp"
        android:textSize="11sp"
        android:background="#034746"
        android:maxWidth="220dp"
        android:padding="12dp"
        android:text="@string/received_message"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="4dp"
        android:background="#012923"
        android:gravity="bottom"
        android:hint="@string/text"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:windowSoftInputMode="adjustNothing"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="81dp"
        android:layout_height="40dp"
        android:background="#46018786"
        android:padding="0dp"
        android:src="@drawable/send_button_icon"
        android:layout_marginBottom="4dp"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo_send" />
</androidx.constraintlayout.widget.ConstraintLayout>